feat: 实现文本转表格图片并上传为附件功能
- 新增文本解析和表格生成逻辑，支持将特定格式文本转换为SVG表格
- 添加TOS上传功能，将生成的表格图片上传为附件
- 修改返回类型为Attachment，支持在单元格中显示可下载的附件
- 优化错误处理和日志记录，增加测试用例

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lark-opdev/block-basekit-cli": "1.0.5"
   },
   "dependencies": {
-    "@lark-opdev/block-basekit-server-api": "1.0.6"
+    "@lark-opdev/block-basekit-server-api": "1.0.6",
+    "@volcengine/tos-sdk": "^2.7.5"
   }
 }
