feat: 添加sharp库支持表格图片优化生成
添加sharp库依赖用于表格图片的优化生成，包括PNG和WebP格式转换
重构表格图片生成逻辑，移除SVG方案改用更高效的图片处理
新增图片压缩和优化功能，提升生成图片的质量和性能

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@lark-opdev/block-basekit-server-api": "1.0.6",
-    "@volcengine/tos-sdk": "^2.7.5"
+    "@volcengine/tos-sdk": "^2.7.5",
+    "sharp": "^0.34.5"
   }
 }
