refactor(table-rendering): 替换sharp为resvg-js以优化矢量表格渲染
- 使用@resvg/resvg-js替代sharp进行SVG到PNG的转换
- 调整表格样式参数：字体大小、行高、最小/最大列宽
- 增加线条宽度至1.25px提升显示清晰度
- 更新README.md补充中文使用说明和渲染细节

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@lark-opdev/block-basekit-server-api": "1.0.6",
-    "@volcengine/tos-sdk": "^2.7.5",
-    "sharp": "^0.34.5"
+    "@resvg/resvg-js": "^2.6.2",
+    "@volcengine/tos-sdk": "^2.7.5"
   }
 }
