feat: 添加阿里云OSS支持并更新文档
- 在package.json中添加ali-oss依赖
- 实现阿里云OSS上传功能
- 添加存储服务选择单选按钮，默认使用阿里云OSS
- 更新README.md文档，说明存储服务选择和参数配置
- 删除不再需要的文档文件
- 更新域名白名单包含aliyuncs.com和volces.com

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@lark-opdev/block-basekit-server-api": "1.0.6",
     "@resvg/resvg-js": "^2.6.2",
-    "@volcengine/tos-sdk": "^2.7.5"
+    "@volcengine/tos-sdk": "^2.7.5",
+    "ali-oss": "^6.23.0"
   }
 }
